--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,13 @@
-<button (click)="login()" class="btn btn-primary">Login with Google</button>
+
+<div class="form-group">
+    <button type="buton" class="btn btn-block" (click)="signInWithGoogle()">
+        <i class="fa fa-google" aria-hidden="true"></i> Login with Google
+    </button>
+    <button type="buton" class="btn btn-block" (click)="signInWithFacebook()">
+        <i class="fa fa-facebook" aria-hidden="true"></i> Login with Facebook
+    </button>
+
+    <button type="buton" class="btn btn-block" (click)="signInWithGithub()">
+        <i class="fa fa-github" aria-hidden="true"></i> Login with Github
+    </button>
+</div>
