--- a/src/app/admin/admin-tour-operators/admin-tour-operators.component.html
+++ b/src/app/admin/admin-tour-operators/admin-tour-operators.component.html
@@ -1,3 +1,16 @@
-<p>
-  admin-tour-operators works!
-</p>
+<table class="table">
+  <thead>
+    <tr>
+      <td>Name</td>
+      <td>Category</td>
+      <td>Manage</td>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let o of operators$">
+      <td>{{ o.businessName }}</td>
+      <td>{{ o.category }}</td>
+      <td><a [routerLink]="['admin/products', o.$key]">Edit</a></td>
+    </tr>
+  </tbody>
+</table>
