--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -14,25 +14,6 @@
             <a class="nav-link" routerLink="/shopping-cart">Shopping Cart</a>
         </li>
 
-        <ng-template  #anonynimousUser1>
-            <li ngbDropdown class="nav-item dropdown">
-              <a class="nav-link" ngbDropdownToggle>Tour Operator</a>
-              <div ngbDropdownMenu  class="dropdown-menu" aria-labelledby="dropdown02">
-                  <a class="dropdown-item" routerLink="/login">Login</a>
-              </div>
-            </li>
-          </ng-template>
-
-        <li ngbDropdown *ngIf="auth.user$ | async as user; else anonynimousUser1" class="nav-item dropdown ">
-          <a  class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>
-            {{user.displayName}}</a>
-          <div ngbDropdownMenu  class="dropdown-menu " aria-labelledby="dropdown01">
-            <a  class="dropdown-item" routerLink="#">My Account</a>
-            <a class="dropdown-item" routerLink="tour-operator/tours/new">Add Tour Listing</a>
-            <a class="dropdown-item" routerLink="/tour-operator/bookings">Manage Bookings</a>
-            <a class="dropdown-item" (click)="logout()">Logout</a>
-          </div>
-        </li>
 
         <ng-template  #anonynimousUser2>
           <li ngbDropdown class="nav-item dropdown">
@@ -50,9 +31,10 @@
             <div ngbDropdownMenu  class="dropdown-menu" aria-labelledby="dropdown02">
             
               <a class="dropdown-item" routerLink="#">My Account</a>
-              <a class="dropdown-item" routerLink="/admin/bookings">Manage Bookings</a>
               <a class="dropdown-item" routerLink="admin/tours">Manage Tours</a>
+              <a  class="dropdown-item" routerLink="admin/tour-operators/new" >New Tour Operator</a>
               <a class="dropdown-item" routerLink="admin/tour-operators">Manage Tour Operators</a>
+              <a class="dropdown-item" routerLink="/admin/bookings">Manage Bookings</a>
               <a class="dropdown-item"  (click)="logout()" >Logout</a>
             </div>
         </li>
