--- a/src/styles.css
+++ b/src/styles.css
@@ -2,5 +2,5 @@
 @import '~bootstrap/dist/css/bootstrap.css';
 @import '~font-awesome/css/font-awesome.css';
 body{
-    padding-top: 70px;
+    padding: 70px;
 }
