style, tittle,table

--- a/src/app/admin/admin-tour-operators/admin-tour-operators.component.html
+++ b/src/app/admin/admin-tour-operators/admin-tour-operators.component.html
@@ -1,3 +1,6 @@
+<P>
+  <a routerLink="../tour-operators/new" class="btn btn-primary">New Tour Operator</a>
+</P>
 <table class="table">
   <thead>
     <tr>
