--- a/src/styles.css
+++ b/src/styles.css
@@ -2,5 +2,6 @@
 @import '~bootstrap/dist/css/bootstrap.css';
 @import '~font-awesome/css/font-awesome.css';
 body{
-    padding: 70px;
+    padding-top: 25px;
+    padding-bottom: 10px;
 }
