--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -11,6 +11,9 @@
           <a class="nav-link" routerLink="/tours">Tours</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link" routerLink="/tour-operators">Tour Operators</a>
+          </li>
+        <li class="nav-item">
             <a class="nav-link" routerLink="/shopping-cart">Shopping Cart</a>
         </li>
 
