--- a/src/app/tour-operators/tour-operators.component.html
+++ b/src/app/tour-operators/tour-operators.component.html
@@ -1,3 +1,33 @@
-<p>
-  tour-operators works!
-</p>
+
+
+
+<div class="row">
+  <div class="col-3">
+    <h1>Categories</h1>
+    <div class="card">
+        <div class="list-group list-group-flush">
+          <a *ngFor="let cat of categories$ | async" routerLink="/tour-operators"   class="list-group-item list-group-item-action">{{cat.name}}</a>
+        </div>
+    </div>
+  </div>
+
+  <div class="col-9">
+      <div class="row">
+          <ng-container  *ngFor="let operator of tourOperators$ | async; let i = index" >
+              <div class="col">
+                  <div class="card" style="width: 20rem;">
+                      <img class="card-img-top" [src]="operator.imageUrl" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">{{ operator.businessName }}</h5>
+                        <p class="card-text">{{ operator.businessDescription }}</p>
+                        <a [routerLink]="['/tour-operators/',operator.$key ]" class="btn btn-primary">More Info</a>
+                      </div>
+                  </div>
+                </div>
+              <div *ngIf="(i + 1)%2 === 0" class="w-100"></div>
+          </ng-container>
+        </div>
+  </div>
+</div>
+
+
